# video-optimizer

./: .gitignore  ANGULAR_BUILD_ISSUE.md  CLAUDE.md  FEATURES_TODO.md  FFMPEG_MODULE.md  PRODUCTION_README.md  README.md  SETTINGS_README.md  TESTS_TODO.md  angular.json  build-appimage.sh  bundles  flatpak-builder.yaml  index.html  karma.conf.js  package-lock.json  package.json  snapcraft.yaml  tailwind.config.js  tsconfig.spec.json  video-optimizer.desktop  vite.config.ts
.agent/workflows/: deploy_v1.md  deploy_v2.md
.flatpak-builder/checksums/: x86_64-flatpak-builder.yaml
.github/workflows/: release.yml
coverage/video-optimizer/: index.html
flatpak/: metadata
scripts/: generate-icon.js
snap/: snapcraft.yaml
snap/gui/: video-optimizer.desktop
src/: App.tsx  index.css  index.html  main.ts  polyfills.ts  styles.scss  test.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: ffmpeg_converter.rs  lib.rs  main.rs  tray_commands.rs  video_commands.rs  window_commands.rs
src-tauri/src/modules/: ffmpeg_runner.rs  gpu_detector.rs  metadata_extractor.rs  mod.rs  smart_renamer.rs  tmdb_client.rs  window_blur.rs
src/app/: app.component.html  app.component.scss  app.component.ts  app.config.ts
src/components/: CloseBehaviorDialog.tsx  DragDropZone.tsx  MetadataSearchDialog.tsx  ProgressChart.tsx  SettingsDialog.tsx  TitleBar.tsx  TrayPopup.tsx  VideoList.tsx  mode-toggle.tsx
src/services/: conversion.service.spec.ts  conversion.service.ts  directory-selector.service.ts  (+17 more)
(+69 files in other folders)
