[package]
name = "video-optimizer"
version = "2.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "video_optimizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.12.2"
tokio = { version = "1.48.0", features = ["process", "io-util", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12.24", features = ["json", "blocking"] }
tauri-plugin-dialog = "2.4.2"
tauri-plugin-store = "2.4.1"
tauri-plugin-notification = "2.3.3"
once_cell = "1.21.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "dwmapi", "uxtheme"] }
raw-window-handle = "0.6"

